<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MAIN screen -->
    <string name="app_name">Capacity Sharing</string>
    <string name="bg_title">Poli\nCoop2014</string>
    <string name="client_button">Client</string>
    <string name="gateway_button">Gateway</string>

    <!-- Benchmark -->
    <string name="benchmark_button">Get Benchmarks!</string>
    <string name="benchmark_title">Benchmark</string>
    <string name="benchmark_title_keygen">Key Generation</string>
    <string name="benchmark_title_sign">Signature</string>
    <string name="benchmark_title_verify">Verification</string>
    <string name="benchmark_start_button">Start</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="action_bluetooth">Enable bluetooth</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Register -->
    <string name="title_activity_register">Account activation</string>
    <string name="button_register">Register</string>
    <string name="user_id_placeholder">ID</string>
    <string name="user_name_placeholder">Name</string>
    <string name="activation_code_placeholder">Activation code</string>

    <!-- Other -->
    <string name="client_title">Client</string>
    <string name="gateway_title">Gateway</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client">Client</string>
    <string name="title_activity_gateway">Gateway</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="loading">loading...</string>
    <string name="online">online</string>
    <string name="AAAS_URL">http://192.168.1.124:3001</string>
     <string name="PROXY_URL">http://192.168.1.124:3000</string>
    <string name="title_activity_supplicant">-</string>

</resources>