<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.usp.larc.sembei.capacitysharing.RegisterActivity" >

    <ProgressBar
        android:id="@+id/home_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_register" />

    <EditText
        android:id="@+id/activation_code_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/activation_code_placeholder"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/user_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activation_code_edittext"
        android:layout_alignRight="@+id/activation_code_edittext"
        android:layout_below="@+id/activation_code_edittext"
        android:ems="10"
        android:hint="@string/user_name_placeholder"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_id_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_name_edittext"
        android:layout_alignRight="@+id/user_name_edittext"
        android:layout_below="@+id/user_name_edittext"
        android:ems="10"
        android:hint="@string/user_id_placeholder"
        android:inputType="number" />

</RelativeLayout>